# silver-sdk

./: CODEGEN_IMPLEMENTATION.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
examples/: codegen_example.rs  wallet_integration.rs
src/: client.rs  codegen.rs  config.rs  lib.rs  signing.rs  transaction_builder.rs  types.rs  wallet.rs  wallet_connect.rs
